fix: 打包异常。